kubernetes/cluster/active/argo/argocd/overlays/prod/argocd-server-webhook-httproute.yaml
---
{
  apiVersion: "gateway.networking.k8s.io/v1",
  kind: "HTTPRoute",
  metadata: {
    name: "argocd-server-webhook",
    labels: {
      app.kubernetes.io/part-of: "argocd",
    },
  },
  spec: {
    parentRefs: [{
      group: "gateway.networking.k8s.io",
      kind: "Gateway",
      name: "http-gateway-api",
      namespace: "istio-ingress",
    }],
    hostnames: [
      "argocd.${FQDN_01}",
    ],
    rules: [{
      matches: [{
        path: {
          type: "PathPrefix",
          value: "/api/webhook",
        },
      }],
      backendRefs: [{
        group: "",
        kind: "Service",
        name: "argocd-server",
        namespace: "argocd",
        port: 443,
        weight: 1,
      }],
    }],
  },
}
